# medical-coding-ml

./: .env.example  .gitignore  NOTES.md  README.md  pyproject.toml  requirements.txt
.github/workflows/: deploy.yml
data/: bigquery_setup.py  icd10_3char_descriptions.csv  load_vocabularies.py  upload_to_gcs.py
data/notes_synth/: run_20260527-140810.jsonl  run_20260527-141037.jsonl
data/splits/: dev_test_split.json  encounter_split.json
data/sql/: 01_conditions_billable_view.sql
docs/: data-access.md  day10_findings.md  day11_findings.md  day12_findings.md  day6_findings.md  day7_findings.md  day8_findings.md  day9_findings.md
models/: thresholds_3char.json
prompts/: multilabel.txt  primary_dx.txt
scripts/: README.md  make_encounter_split.py  make_split.py  patch_load_to_bq.py  patch_per_code_analysis.py  sample_check.py  write_build_prompt.py  write_cv.py  write_day10_findings.py  write_day11_findings.py  write_day12_findings.py  write_day7_findings.py  write_day8_findings.py  write_demo_predict.py  write_evaluate.py  write_findings.py  write_generate.py  write_load_data.py  write_load_encounter_data.py  write_load_to_bq.py  write_per_code_analysis.py  write_prompts.py  write_run_day5.py  write_run_day6.py  write_run_day7.py  write_run_day9.py  write_run_encounter_cv.py  write_run_encounter_generation.py  write_run_generation.py  write_select_encounters.py  write_threshold.py  write_train.py
serving/: Dockerfile  download_models.py  requirements.txt
sql/: notes_labels_views.sql
terraform/: iam.tf  main.tf  terraform.tfvars.example  variables.tf
(+23 files in other folders)
