[project]
name = "medical-coding-ml"
version = "0.1.0"
description = "ICD-10/CPT code suggestion from clinical notes — MLOps pipeline on GCP"
requires-python = ">=3.11"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "W", "B", "UP"]
ignore = ["E501"]  # let formatter handle line length

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-ra --strict-markers"